--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body style="background-color: #9292be;">
-<canvas id="board"></canvas>
+<canvas id="game"></canvas>
+<script src="vendor/libs.js"></script>
 <script src="vendor/system.js"></script>
 <script src="vendor/typescript.js"></script>
 
