--- a/index.html
+++ b/index.html
@@ -8,10 +8,22 @@
 <body style="background-color: #9292be;">
 <canvas id="game"></canvas>
 <script src="vendor/libs.js"></script>
+<script src="vendor/keyboard.js"></script>
 <script src="vendor/system.js"></script>
 <script src="vendor/typescript.js"></script>
+<script src="vendor/Stats.js"></script>
 
 <script>
+
+    var stats = new Stats();
+    window.stats=stats;
+    stats.setMode( 0 ); // 0: fps, 1: ms, 2: mb
+    // align top-left
+    stats.domElement.style.position = 'absolute';
+    stats.domElement.style.left = '0px';
+    stats.domElement.style.top = '0px';
+    document.body.appendChild( stats.domElement );
+
     System.config({
         transpiler: 'typescript',
         typescriptOptions: { emitDecoratorMetadata: true },
